# code2

./: RGR.txt  hola.c  pasar archivo.txt
POO/: user.cc  user.h
POO/p1/: CMakeLists.txt  user-main.cc  user.cc  user.h
POO/p2/: CMakeLists.txt  persons-main.cc  persons.cc  persons.h
POO/p2/data/: cyclists.csv  directors.csv
POO/p2/src/: CMakeLists.txt
POO/p2/src/catalog/: CMakeLists.txt  catalog-main.cc  catalog.cc  catalog.h
POO/p2/src/persons/: CMakeLists.txt  persons-main.cc  persons.cc  persons.h
POO/p4/: stage-main.cc  stage.cc  stage.h
SO/: ej4  ej5  ej6  ej7  ejercicio101  ejercicio101.c  ejercicio2.c  ejercicio3.c  ejercicio5.c  ejercicio8.c  ejercicio9.c  factorial  factorial.c
SO/practica1/: ej8  ej9  ejercicio1.c  ejercicio10  ejercicio10.c  ejercicio4.c  ejercicio6.c  ejercicio7.c  ejercicio8.c
SO/practica2/: ejercicio1  ejercicio1.c
